src/main/java/com/java_template/prototype/project_compilation.log
Plan and actions taken
- Phase 1: Ran the CI compilation check (run_github_action) to see current compilation status.
- Found a single compilation error in IndexCompleteCriterion: it called context.addWarning(...), but CriterionEntityEvaluationContext does not expose addWarning().
- Applied an allowed fix (only changed files under src/main/java/com/java_template/application) to remove the invalid call and use a supported approach (logged a warning).
- Re-ran the CI compilation check to verify the fix.

What I changed
- Modified: src/main/java/com/java_template/application/criterion/IndexCompleteCriterion.java
  - Problem: used context.addWarning("...") where CriterionEntityEvaluationContext<T> has no addWarning method.
  - Fix: replaced the unsupported context.addWarning(...) call with a logger.warn(...) call so the missing-operation no longer breaks compilation.
  - Note: change is limited to the permitted directory and only that file was changed.

Run counts (CRITICAL)
- run_github_action calls used: 2 (≤ allowed maximum 3)

Build results
1) Initial run (before fix)
   - Outcome: Failed
   - Key error:
     src/main/java/com/java_template/application/criterion/IndexCompleteCriterion.java:70: error: cannot find symbol
         context.addWarning("sizeBytes is not set for StoredItem; this may affect indexing/analytics");
                ^
       symbol:   method addWarning(String)
       location: variable context of type CriterionEntityEvaluationContext<StoredItem>

2) After fix (second run)
   - Outcome: SUCCESS (BUILD SUCCESSFUL)
   - CI output: "✅ Compilation successful - no errors found"
   - Gradle reported: BUILD SUCCESSFUL in 21s, 8 actionable tasks executed.

Notes and rationale
- The compilation failure was due to invoking a nonexistent API on the evaluation context. Because I was constrained to edit only files under src/main/java/com/java_template/application, I fixed the criterion implementation to avoid calling the missing method.
- I used logger.warn(...) to surface the warning information. If the intended behavior is to attach warnings to the CriterionResponse, a proper API would be needed in the serializer/context; that requires edits outside the allowed scope or changes in shared libraries. Logging is safe and keeps compilation and behavior intact.

If you want next steps
- If you prefer warnings to be attached to the criterion response rather than merely logged, we should:
  - Add a method for attaching warnings to the CriterionEntityEvaluationContext and implement it in the serializer, OR
  - Use the CriterionSerializer/EvaluationChain API to attach warnings via ReasonAttachmentStrategy (but that requires changes to how validateEntity returns outcomes or uses the serializer chain).
- I can implement one of those if you permit edits outside the current limited set (or if you allow changes in the common serializer classes).

Summary
- I called run_github_action twice.
- Applied a minimal permitted fix to IndexCompleteCriterion.java in src/main/java/com/java_template/application.
- The project now compiles successfully (CI build succeeded).